Lee can be told about lizard people only from chapter 4 onwards.
Lee will only sell mercenary armour while the NH is a mercenary.
Lee's dialog has 1 more previously unused dialogue lines.
Lehmar attacking the NH causes Meldor to also attack the NH.
Lehmar does not immediately notice the theft of his ledger.
Lehmar does not lend money to NH if he attacked him, unless Oblivion is cast on him.
Lobart's quest for working clothes does not start if NH already has bought the clothes or has some other armor.
Logan teaches skinning reptiles instead of skinning off furs.
Lothar can only be told about getting proof of dragons after talking to him about the dragons.
Lothar cannot be asked about the part of the metal ornament after already receiving it from Hagen.
Lothar's dialog has 21 more previously unused dialogue lines.
Lothar's few dialog options are not hidden after talking to Hagen.
Maria cannot be asked to raise the salary from Onar before it has been agreed upon.
Maria gives dragon hunters gold instead of increase in salary that they can't get anymore.
Maria's golden plate can only be returned after asking who she is.
Mario cannot be recruited to a full ship crew.
Martin actually takes the evidence from NH and does not repeat it needlessly every time.
Martin only hints at going to Vatras for the Wisp amulet, if NH does not already have it.
Mika can be asked whether all is quiet, even if the mercenaries left Akil's farm themselves.
Mika properly evaluates NH's armor before commenting on it.
Mika won't talk to NH if Lares is in the party.
Milten does not simultaneously return the letter from Hagen and the key to the monastery.
Milten returns to the monastery in the beginning of the third chapter instead of after giving the report to Hagen.
Milten will not say Gorn is in prison if he is already released.
Nadja wears previously unused skimpy clothes.
Nagur can only be asked about finding Baltram if NH has not yet spoken with him.